[gd_scene load_steps=10 format=3 uid="uid://dbj88qtbo6obd"]

[ext_resource type="Texture2D" uid="uid://cw0rpv8vb1emk" path="res://img/cloud-icon-pixelart.png" id="1_cqvpq"]
[ext_resource type="Script" path="res://intro.gd" id="1_w7edf"]
[ext_resource type="Texture2D" uid="uid://rbvqxhfn0ucw" path="res://img/title-lastbastion.png" id="2_x62n0"]
[ext_resource type="Texture2D" uid="uid://bsfix375ltg4t" path="res://img/START_Button.png" id="3_4leny"]
[ext_resource type="AudioStream" uid="uid://cxk3dbh4ooxra" path="res://Audio/button_effect.wav" id="5_7iqde"]
[ext_resource type="AudioStream" uid="uid://bc4v3pfpn06md" path="res://Audio/intro.wav" id="5_efdpk"]

[sub_resource type="Animation" id="Animation_yp1b8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/NubeIzq:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(209, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/NubeArriba3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(709, -130.264)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/NubeArriba2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(295, -134.264)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/NubeArriba1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-105, -152.264)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/NubeBajo3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(733, 534)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/NubeBajo2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(319, 530)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/NubeBajo1:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-81, 512)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Titulo:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Start:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/NubeDer:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1095, 672)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/Titulo:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(225, 156)]
}

[sub_resource type="Animation" id="Animation_qcdgk"]
resource_name = "intro_game"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/NubeIzq:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(209, -12), Vector2(-209, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/NubeArriba3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(709, -130.264), Vector2(709, -287.264)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/NubeArriba2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(295, -134.264), Vector2(295, -292.264)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/NubeArriba1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-105, -152.264), Vector2(-105, -300.264)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/NubeBajo3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(733, 534), Vector2(733, 734)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/NubeBajo2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(319, 530), Vector2(319, 730)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/NubeBajo1:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-81, 512), Vector2(-81, 712)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Titulo:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Start:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1, 1.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/NubeDer:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1095, 672), Vector2(1495, 672)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/Titulo:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(225, 156)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk4tv"]
_data = {
"RESET": SubResource("Animation_yp1b8"),
"intro_game": SubResource("Animation_qcdgk")
}

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7edf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NubeIzq" type="TextureRect" parent="CanvasLayer"]
offset_left = 209.0
offset_top = -12.0
offset_right = 2129.0
offset_bottom = 948.0
rotation = 1.57174
scale = Vector2(0.351604, 0.351604)
texture = ExtResource("1_cqvpq")

[node name="NubeDer" type="TextureRect" parent="CanvasLayer"]
offset_left = 1095.0
offset_top = 672.0
offset_right = 3015.0
offset_bottom = 1632.0
rotation = 4.71136
scale = Vector2(0.351604, 0.351604)
texture = ExtResource("1_cqvpq")

[node name="NubeBajo1" type="TextureRect" parent="CanvasLayer"]
offset_left = -81.0
offset_top = 512.0
offset_right = 1839.0
offset_bottom = 1472.0
rotation = 6.2819
scale = Vector2(0.298342, 0.298342)
texture = ExtResource("1_cqvpq")

[node name="NubeBajo2" type="TextureRect" parent="CanvasLayer"]
offset_left = 319.0
offset_top = 530.0
offset_right = 2239.0
offset_bottom = 1490.0
rotation = 6.2819
scale = Vector2(0.298342, 0.298342)
texture = ExtResource("1_cqvpq")

[node name="NubeBajo3" type="TextureRect" parent="CanvasLayer"]
offset_left = 733.0
offset_top = 534.0
offset_right = 2653.0
offset_bottom = 1494.0
rotation = 6.2819
scale = Vector2(0.298342, 0.298342)
texture = ExtResource("1_cqvpq")

[node name="NubeArriba1" type="TextureRect" parent="CanvasLayer"]
offset_left = -105.0
offset_top = -152.264
offset_right = 1815.0
offset_bottom = 807.736
rotation = 6.2819
scale = Vector2(0.298342, 0.298342)
texture = ExtResource("1_cqvpq")

[node name="NubeArriba2" type="TextureRect" parent="CanvasLayer"]
offset_left = 295.0
offset_top = -134.264
offset_right = 2215.0
offset_bottom = 825.736
rotation = 6.2819
scale = Vector2(0.298342, 0.298342)
texture = ExtResource("1_cqvpq")

[node name="NubeArriba3" type="TextureRect" parent="CanvasLayer"]
offset_left = 709.0
offset_top = -130.264
offset_right = 2629.0
offset_bottom = 829.736
rotation = 6.2819
scale = Vector2(0.298342, 0.298342)
texture = ExtResource("1_cqvpq")

[node name="Titulo" type="TextureRect" parent="CanvasLayer"]
offset_left = 225.0
offset_top = 156.0
offset_right = 1195.0
offset_bottom = 343.0
scale = Vector2(0.918008, 0.918008)
texture = ExtResource("2_x62n0")

[node name="Start" type="TextureButton" parent="CanvasLayer"]
offset_left = 562.0
offset_top = 425.0
offset_right = 1083.0
offset_bottom = 610.0
scale = Vector2(0.434587, 0.434587)
texture_normal = ExtResource("3_4leny")

[node name="ButtonSound" type="AudioStreamPlayer" parent="CanvasLayer/Start"]
stream = ExtResource("5_7iqde")

[node name="IntroMusic" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("5_efdpk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vk4tv")
}

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_efdpk")
autoplay = true

[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_start_button_pressed"]
